--- a/lproj/da.lproj/KnownSyncServers.plist
+++ b/lproj/da.lproj/KnownSyncServers.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>BazQux</key>
@@ -7,35 +7,35 @@
 		<key>Address</key>
 		<string>www.bazqux.com</string>
 		<key>Hint</key>
-		<string>Enter the info you set in BazQux's 'Mobile login' settings</string>
+		<string>Indtast informationerne du har i BazQux&apos;s &apos;Mobile login&apos;-indstillinger</string>
 	</dict>
 	<key>FeedHQ</key>
 	<dict>
 		<key>Address</key>
 		<string>feedhq.org</string>
 		<key>Hint</key>
-		<string>Enter email address and password associated to your FeedHQ account</string>
+		<string>Indtast emailadresse og kodeord associeret med din FeedHQ konto</string>
 	</dict>
 	<key>InoReader</key>
 	<dict>
 		<key>Address</key>
 		<string>www.inoreader.com</string>
 		<key>Hint</key>
-		<string>Enter username and password associated to your InoReader account</string>
+		<string>Indtast emailadresse og kodeord associeret med din InoReader konto</string>
 	</dict>
 	<key>TheOldReader</key>
 	<dict>
 		<key>Address</key>
 		<string>theoldreader.com</string>
 		<key>Hint</key>
-		<string>Enter username and password defined in Settings/General section of theoldreader.com</string>
+		<string>Indtast emailadressen og kodeord defineret i Settings/General sektionen af theoldreader.com</string>
 	</dict>
 	<key>Andet</key>
 	<dict>
 		<key>Address</key>
 		<string></string>
 		<key>Hint</key>
-		<string>Enter server's address and your credentials for this server</string>
+		<string>Indtast serverens adresse og dine oplysninger for den pågældende server</string>
 	</dict>
 </dict>
 </plist>
