--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: objective-c
 osx_image: xcode8
 xcode_workspace: Vienna.xcworkspace
 xcode_scheme: Vienna
+before_script:
+  - gem install xcpretty
+
 # script: xctool -workspace "$TRAVIS_XCODE_WORKSPACE" -scheme "$TRAVIS_XCODE_SCHEME"
-script: xcodebuild -workspace "$TRAVIS_XCODE_WORKSPACE" -scheme "$TRAVIS_XCODE_SCHEME" -configuration Development
+script: xcodebuild -workspace "$TRAVIS_XCODE_WORKSPACE" -scheme "$TRAVIS_XCODE_SCHEME" -configuration Development | xcpretty
 notifications:
   slack:
     secure: KaYeG8xgiCCROn0yBrDj0xMI5f1LECVgqJalp+2APy2AdQzHmYQdysiy6c1xNL1//kW3TPAakopgpBwpQ6YTVBfI9F/n9SCvMEwHKKZVT1kwqYJDNwGKXy1tXJKQfhI2x6bs2+HJOgOTLhU+otrDlYyZWEel56q/NzNVx0dwHFs=
