Updated help book script for the new help book format
Renamed script from Translations.sh to IndexHelpbook.sh so that the name is more accurate.
Also modified .gitignore to remove .helpindex files from git

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@
 # profile - REMOVED temporarily (on double-checking, this seems incorrect; I can't find it in OS X docs?)
 #profile
 
+# Help indexes
+Vienna/**/*.helpindex
 
 ####
 # Xcode temporary files that should never be committed
