--- a/Resources/DemoFeeds.plist
+++ b/Resources/DemoFeeds.plist
@@ -75,7 +75,7 @@
 	<key>Vienna Developer Blog</key>
 	<dict>
 		<key>URL</key>
-		<string>http://www.vienna-rss.org/?feed=rss2</string>
+		<string>http://www.vienna-rss.com/?feed=rss2</string>
 	</dict>
 	<key>Vienna Support</key>
 	<dict>
