--- a/Resources/Vienna-Info.plist
+++ b/Resources/Vienna-Info.plist
@@ -53,8 +53,6 @@
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>Vienna</string>
-	<key>CFBundleGetInfoString</key>
-	<string>Vienna version VCS_TAG :VCS_SHORT_HASH:, Copyright 2004-2016 Contributors. See Help/Acknowledgements for list of contributors.</string>
 	<key>CFBundleHelpBookFolder</key>
 	<string>Vienna.help</string>
 	<key>CFBundleHelpBookName</key>
@@ -107,7 +105,7 @@
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright 2004-2016 Contributors. See Help/Acknowledgements for list of contributors.</string>
+	<string>© 2004–2017</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
