--- a/Interfaces/de.lproj/KnownSyncServers.plist
+++ b/Interfaces/de.lproj/KnownSyncServers.plist
@@ -14,14 +14,14 @@
 		<key>Address</key>
 		<string>feedhq.org</string>
 		<key>Hint</key>
-		<string>E-Mail-Adresse und Passwort Ihres FeedHQ Account eingeben.</string>
+		<string>E-Mail-Adresse und Passwort Ihres FeedHQ-Accounts eingeben.</string>
 	</dict>
 	<key>InoReader</key>
 	<dict>
 		<key>Address</key>
 		<string>www.inoreader.com</string>
 		<key>Hint</key>
-		<string>Nutzername und Passwort Ihres InoReader Account eingeben.</string>
+		<string>Nutzername und Passwort Ihres InoReader-Accounts eingeben.</string>
 	</dict>
 	<key>TheOldReader</key>
 	<dict>
