--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ jobs:
       script: swiftlint --lenient --reporter emoji
 
 notifications:
-  webhooks:
-    urls:
-    on_failure: always
-    on_start: never
+  slack:
+    secure: G/L2fP8z8+jNFicgMkOPrc3e7HqdQ2HkyazUMHwWLOsKmjM0ERqQ6FZXLlSr2P/kukqfUGHCGBGRdoMUb7jebNY0fNQyLYoUD7L91MLaz/zSBpDu4Yl+cVQJER1F6WFWNf697Uevvun1Mmz3N6zHe82KjQtE1yk/qFCbPyG5uJ8=
+ 
