--- a/Interfaces/fr.lproj/RSSSources.plist
+++ b/Interfaces/fr.lproj/RSSSources.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Local File</key>
@@ -14,7 +14,7 @@
 		<key>SiteHomePage</key>
 		<string>http://www.livejournal.com</string>
 		<key>LinkName</key>
-		<string>Entrer le nom d'utilisateur LiveJournal</string>
+		<string>Entrer le nom d&apos;utilisateur LiveJournal</string>
 		<key>LinkTemplate</key>
 		<string>http://www.livejournal.com/users/%@/data/rss</string>
 	</dict>
@@ -23,7 +23,7 @@
 		<key>SiteHomePage</key>
 		<string>http://spaces.msn.com</string>
 		<key>LinkName</key>
-		<string>Entrer le nom d'utilisateur MSN Spaces</string>
+		<string>Entrer le nom d&apos;utilisateur MSN Spaces</string>
 		<key>LinkTemplate</key>
 		<string>http://spaces.msn.com/members/%@/feed.rss</string>
 	</dict>
@@ -32,7 +32,7 @@
 		<key>SiteHomePage</key>
 		<string>http://www.blogspot.com</string>
 		<key>LinkName</key>
-		<string>Entrer le nom d'utilisateur Blogspot</string>
+		<string>Entrer le nom d&apos;utilisateur Blogspot</string>
 		<key>LinkTemplate</key>
 		<string>http://%@.blogspot.com/atom.xml</string>
 	</dict>
@@ -41,14 +41,14 @@
 		<key>SiteHomePage</key>
 		<string>http://www.xanga.com</string>
 		<key>LinkName</key>
-		<string>Entrer le nom d'utilisateur Xanga</string>
+		<string>Entrer le nom d&apos;utilisateur Xanga</string>
 		<key>LinkTemplate</key>
 		<string>http://www.xanga.com/rss.aspx?user=%@</string>
 	</dict>
 	<key>URL</key>
 	<dict>
 		<key>LinkName</key>
-		<string>Entrer l'URL d'un flux RSS</string>
+		<string>Entrer l&apos;URL d&apos;un flux RSS</string>
 		<key>LinkTemplate</key>
 		<string>%@</string>
 	</dict>
