--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,17 @@
-# SwiftLint 0.20.1
+# SwiftLint 0.21
 
 included:
   - src
 
 disabled_rules:
+  - block_based_kvo # Swift 4
+  - explicit_top_level_acl
+  - explicit_type_interface
+  - file_header
   - line_length
+  - no_extension_access_modifier
+  - strict_fileprivate # Swift 4
+  - trailing_closure # Bug: realm/SwiftLint#1754
   - todo
 
 opt_in_rules:
@@ -14,18 +21,15 @@ opt_in_rules:
   - conditional_returns_on_newline
   - empty_count
   - explicit_init
-#  - explicit_top_level_acl
-#  - explicit_type_interface
   - extension_access_modifier
   - fatal_error_message
-#  - file_header
   - first_where
   - force_unwrapping
   - implicit_return
   - implicitly_unwrapped_optional
+  - let_var_whitespace
   - multiline_parameters
   - nimble_operator
-#  - no_extension_access_modifier
   - number_separator
   - object_literal
   - operator_usage_whitespace
@@ -35,4 +39,5 @@ opt_in_rules:
   - redundant_nil_coalescing
   - sorted_imports
   - switch_case_on_newline
+  - unneeded_parentheses_in_closure_argument
   - vertical_parameter_alignment_on_call
