--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,18 +1,19 @@
-# SwiftLint 0.21
+# SwiftLint 0.22
 
 included:
   - src
 
 disabled_rules:
   - block_based_kvo # Swift 4
+  - explicit_enum_raw_value
   - explicit_top_level_acl
   - explicit_type_interface
   - file_header
   - line_length
   - no_extension_access_modifier
-  - strict_fileprivate # Swift 4
-  - trailing_closure # Bug: realm/SwiftLint#1754
+  - no_grouping_extension
   - todo
+  - trailing_closure # Bug: realm/SwiftLint#1754
 
 opt_in_rules:
   - attributes
@@ -27,6 +28,7 @@ opt_in_rules:
   - force_unwrapping
   - implicit_return
   - implicitly_unwrapped_optional
+  - joined_default_parameter
   - let_var_whitespace
   - multiline_parameters
   - nimble_operator
@@ -34,10 +36,14 @@ opt_in_rules:
   - object_literal
   - operator_usage_whitespace
   - overridden_super_call
+  - pattern_matching_keywords
   - private_outlet
   - prohibited_super_call
+  - quick_discouraged_call
   - redundant_nil_coalescing
   - sorted_imports
+  - single_test_class
+  - strict_fileprivate
   - switch_case_on_newline
   - unneeded_parentheses_in_closure_argument
   - vertical_parameter_alignment_on_call
