--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,4 +1,4 @@
-# SwiftLint 0.23
+# SwiftLint 0.24
 
 included:
   - src
@@ -9,15 +9,20 @@ disabled_rules:
   - todo
 
 opt_in_rules:
+  - array_init
   - attributes
   - closure_end_indentation
   - closure_spacing
   - conditional_returns_on_newline
   - contains_over_first_not_nil
   - empty_count
+#  - explicit_enum_raw_value
   - explicit_init
+#  - explicit_top_level_acl
+#  - explicit_type_interface
   - extension_access_modifier
   - fatal_error_message
+#  - file_header
   - first_where
   - force_unwrapping
   - implicit_return
@@ -25,19 +30,26 @@ opt_in_rules:
   - joined_default_parameter
   - let_var_whitespace
   - literal_expression_end_indentation
+#  - multiline_arguments
   - multiline_parameters
   - nimble_operator
+#  - no_extension_access_modifier
+#  - no_grouping_extension
   - number_separator
   - object_literal
   - operator_usage_whitespace
   - overridden_super_call
+  - override_in_extension
   - pattern_matching_keywords
   - private_outlet
   - prohibited_super_call
   - quick_discouraged_call
+  - quick_discouraged_focused_test
+  - quick_discouraged_pending_test
   - redundant_nil_coalescing
   - sorted_imports
   - single_test_class
+  - sorted_first_last
   - strict_fileprivate
   - switch_case_on_newline
 #  - trailing_closure # Bug: realm/SwiftLint#1754
