--- a/3rdparty/PSMTabBarControl.framework/Versions/A/Resources/Info.plist
+++ b/3rdparty/PSMTabBarControl.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>15A263e</string>
+	<string>17C88</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -18,21 +18,25 @@
 	<string>FMWK</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleSupportedPlatforms</key>
+	<array>
+		<string>MacOSX</string>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>6E35b</string>
+	<string>9C40b</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>14D125</string>
+	<string>17C76</string>
 	<key>DTSDKName</key>
-	<string>macosx10.10</string>
+	<string>macosx10.13</string>
 	<key>DTXcode</key>
-	<string>0640</string>
+	<string>0920</string>
 	<key>DTXcodeBuild</key>
-	<string>6E35b</string>
+	<string>9C40b</string>
 </dict>
 </plist>
