--- a/Resources/Vienna-Info.plist
+++ b/Resources/Vienna-Info.plist
@@ -107,7 +107,7 @@
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2004–2017</string>
+	<string>© 2004–2018 The Vienna RSS Project</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
