--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,9 @@
-# SwiftLint 0.24
+# SwiftLint 0.25
 
 included:
   - src
 
 disabled_rules:
-  - block_based_kvo # Swift 4
   - line_length
   - todo
 
@@ -15,14 +14,13 @@ opt_in_rules:
   - closure_spacing
   - conditional_returns_on_newline
   - contains_over_first_not_nil
+  - discouraged_object_literal
+  - discouraged_optional_boolean
   - empty_count
-#  - explicit_enum_raw_value
   - explicit_init
-#  - explicit_top_level_acl
-#  - explicit_type_interface
   - extension_access_modifier
   - fatal_error_message
-#  - file_header
+  - file_header
   - first_where
   - force_unwrapping
   - implicit_return
@@ -30,28 +28,47 @@ opt_in_rules:
   - joined_default_parameter
   - let_var_whitespace
   - literal_expression_end_indentation
-#  - multiline_arguments
   - multiline_parameters
   - nimble_operator
-#  - no_extension_access_modifier
-#  - no_grouping_extension
   - number_separator
   - object_literal
   - operator_usage_whitespace
   - overridden_super_call
   - override_in_extension
   - pattern_matching_keywords
+  - prefixed_toplevel_constant
   - private_outlet
   - prohibited_super_call
   - quick_discouraged_call
   - quick_discouraged_focused_test
   - quick_discouraged_pending_test
   - redundant_nil_coalescing
+  - required_enum_case
   - sorted_imports
   - single_test_class
   - sorted_first_last
   - strict_fileprivate
   - switch_case_on_newline
-#  - trailing_closure # Bug: realm/SwiftLint#1754
+  - trailing_closure
   - unneeded_parentheses_in_closure_argument
   - vertical_parameter_alignment_on_call
+  - yoda_condition
+
+#  - explicit_acl
+#  - explicit_enum_raw_value
+#  - explicit_top_level_acl
+#  - explicit_type_interface
+#  - file_header
+#  - multiline_arguments
+#  - no_extension_access_modifier
+#  - no_grouping_extension
+#  - private_action
+
+file_header:
+  required_pattern: |
+                    \/\/
+                    \/\/  .*?\.swift
+                    \/\/  Vienna
+                    \/\/
+                    \/\/  Copyright (\d{4}|\d{4}-\d{4})
+                    \/\/
