--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,9 +1,10 @@
-# SwiftLint 0.25
+# SwiftLint 0.25.1
 
 included:
   - Vienna/Sources
 
 disabled_rules:
+  - identifier_name # realm/SwiftLint #2231
   - line_length
   - todo
 
@@ -16,7 +17,9 @@ opt_in_rules:
   - contains_over_first_not_nil
   - discouraged_object_literal
   - discouraged_optional_boolean
+  - discouraged_optional_collection
   - empty_count
+  - empty_string
   - explicit_init
   - extension_access_modifier
   - fatal_error_message
@@ -28,6 +31,7 @@ opt_in_rules:
   - joined_default_parameter
   - let_var_whitespace
   - literal_expression_end_indentation
+  - lower_acl_than_parent
   - multiline_parameters
   - nimble_operator
   - number_separator
@@ -51,6 +55,7 @@ opt_in_rules:
   - switch_case_on_newline
   - trailing_closure
   - unneeded_parentheses_in_closure_argument
+  - untyped_error_in_catch
   - vertical_parameter_alignment_on_call
   - yoda_condition
 
@@ -58,7 +63,6 @@ opt_in_rules:
 #  - explicit_enum_raw_value
 #  - explicit_top_level_acl
 #  - explicit_type_interface
-#  - file_header
 #  - multiline_arguments
 #  - no_extension_access_modifier
 #  - no_grouping_extension
