--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,3 +4,5 @@ files:
     languages_mapping:
       osx_locale:
         pt-BR: pt-BR
+  - source: /Vienna/Resources/Base.lproj/Localizable.stringsdict
+    translation: /Vienna/Resources/%osx_locale%.lproj/Localizable.stringsdict
