--- a/crowdin.yml
+++ b/crowdin.yml
@@ -6,3 +6,6 @@ files:
         pt-BR: pt-BR
   - source: /Vienna/Resources/Base.lproj/Localizable.stringsdict
     translation: /Vienna/Resources/%osx_locale%.lproj/Localizable.stringsdict
+    languages_mapping:
+      osx_locale:
+        pt-BR: pt-BR
