--- a/Vienna/SharedSupport/Plugins/SearchWithGoogle/info.plist
+++ b/Vienna/SharedSupport/Plugins/SearchWithGoogle/info.plist
@@ -7,7 +7,7 @@
 	<key>Type</key>
 	<string>SearchEngine</string>
 	<key>SearchQueryString</key>
-	<string>http://www.google.com/search?q=$SearchTerm$</string>
+	<string>https://www.google.com/search?q=$SearchTerm$</string>
 	<key>FriendlyName</key>
 	<string>Google</string>
 	<key>Tooltip</key>
