--- a/Vienna/SharedSupport/Plugins/SearchWithWikipedia/info.plist
+++ b/Vienna/SharedSupport/Plugins/SearchWithWikipedia/info.plist
@@ -7,7 +7,7 @@
 	<key>Type</key>
 	<string>SearchEngine</string>
 	<key>SearchQueryString</key>
-	<string>http://en.wikipedia.org/w/index.php?title=Special:Search&amp;search=$SearchTerm$&amp;go=Go</string>
+	<string>https://en.wikipedia.org/w/index.php?title=Special:Search&amp;search=$SearchTerm$&amp;go=Go</string>
 	<key>FriendlyName</key>
 	<string>Wikipedia</string>
 	<key>Tooltip</key>
