Add NSAppleEventsUsageDescription key to Info.plist

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -108,6 +108,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSAppleEventsUsageDescription</key>
+	<string></string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSHumanReadableCopyright</key>
