Clarify FeedHQ hint
Login identifier can be a username (and not only an email address)
Issue #417

--- a/Vienna/Resources/da.lproj/KnownSyncServers.plist
+++ b/Vienna/Resources/da.lproj/KnownSyncServers.plist
@@ -14,7 +14,7 @@
 		<key>Address</key>
 		<string>feedhq.org</string>
 		<key>Hint</key>
-		<string>Indtast emailadresse og kodeord associeret med din FeedHQ konto</string>
+		<string>Indtast brugernavn (eller emailadressen) og kodeord associeret med din FeedHQ konto</string>
 	</dict>
 	<key>InoReader</key>
 	<dict>
