--- a/Vienna/Resources/es.lproj/KnownSyncServers.plist
+++ b/Vienna/Resources/es.lproj/KnownSyncServers.plist
@@ -14,7 +14,7 @@
 		<key>Address</key>
 		<string>feedhq.org</string>
 		<key>Hint</key>
-		<string>Introduzca el correo electrónico y la contraseña asociada a su cuenta de FeedHQ</string>
+		<string>Introduzca el nombre de usuario (o correo electrónico) y la contraseña para su cuenta de FeedHQ</string>
 	</dict>
 	<key>InoReader</key>
 	<dict>
