--- a/Vienna/Resources/fr.lproj/KnownSyncServers.plist
+++ b/Vienna/Resources/fr.lproj/KnownSyncServers.plist
@@ -14,7 +14,7 @@
 		<key>Address</key>
 		<string>feedhq.org</string>
 		<key>Hint</key>
-		<string>Entrez l&apos;adresse mail et le mot de passe associé à votre compte FeedHQ</string>
+		<string>Entrez le nom utilisateur (ou l&apos;adresse mail) et le mot de passe associé à votre compte FeedHQ</string>
 	</dict>
 	<key>InoReader</key>
 	<dict>
