--- a/Vienna/Resources/ru.lproj/KnownSyncServers.plist
+++ b/Vienna/Resources/ru.lproj/KnownSyncServers.plist
@@ -14,7 +14,7 @@
 		<key>Address</key>
 		<string>feedhq.org</string>
 		<key>Hint</key>
-		<string>Введите email и пароль от вашего аккаунта FeedHQ</string>
+		<string>Введите имя пользователя (или email) и пароль от вашего аккаунта FeedHQ</string>
 	</dict>
 	<key>InoReader</key>
 	<dict>
