--- a/Vienna/Resources/zh-Hans.lproj/KnownSyncServers.plist
+++ b/Vienna/Resources/zh-Hans.lproj/KnownSyncServers.plist
@@ -14,7 +14,7 @@
 		<key>Address</key>
 		<string>feedhq.org</string>
 		<key>Hint</key>
-		<string>Enter email address and password associated to your FeedHQ account</string>
+		<string>Enter username (or Email) and password associated to your FeedHQ account</string>
 	</dict>
 	<key>InoReader</key>
 	<dict>
