Add Sparkle EdDSA key support

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -138,6 +138,8 @@
 	<string>YES</string>
 	<key>SUPublicDSAKeyFile</key>
 	<string>SparklePublicKey.pem</string>
+	<key>SUPublicEDKey</key>
+	<string>&lt;insert public key&gt;</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
