Enable automatic update checks by default
This improves the user experience, as Sparkle asks for confirmation immediately at first launch, which is disruptive.

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -136,6 +136,8 @@
 	<string>ViennaApp</string>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
 	<string>YES</string>
+	<key>SUEnableAutomaticChecks</key>
+	<true/>
 	<key>SUPublicDSAKeyFile</key>
 	<string>SparklePublicKey.pem</string>
 	<key>SUPublicEDKey</key>
