Enable automatic update checks by default
This improves the user experience, as Sparkle asks for confirmation immediately at first launch, which is disruptive.

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -138,6 +138,8 @@
 	<string>YES</string>
 	<key>OSAScriptingDefinition</key>
 	<string>Vienna.sdef</string>
+	<key>SUEnableAutomaticChecks</key>
+	<true/>
 	<key>SUPublicDSAKeyFile</key>
 	<string>SparklePublicKey.pem</string>
 	<key>SUPublicEDKey</key>
