Set the public EdDSA key

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -143,7 +143,7 @@
 	<key>SUPublicDSAKeyFile</key>
 	<string>SparklePublicKey.pem</string>
 	<key>SUPublicEDKey</key>
-	<string>&lt;insert public key&gt;</string>
+	<string>nPwwT+poO5Kmi1NZkE5OveKB8lvQVY20N22E8jgxLCg=</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
