Fix hasOSScriptsMenu function
With sandboxing enabled, files outside of the sandbox container cannot be accessed, including other user defaults. This can be mitigated by a "temporary exception" entitlement for (read-only) access to specific user defaults, referenced by their bundle ID.

--- a/Vienna/ViennaDeployment.entitlements
+++ b/Vienna/ViennaDeployment.entitlements
@@ -11,5 +11,10 @@
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)-spks</string>
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)-spki</string>
 	</array>
+	<key>com.apple.security.temporary-exception.shared-preference.read-only</key>
+	<array>
+		<string>com.apple.scriptmenu</string>
+		<string>com.apple.systemuiserver</string>
+	</array>
 </dict>
 </plist>
