--- a/Vienna/Vienna.entitlements
+++ b/Vienna/Vienna.entitlements
@@ -13,5 +13,10 @@
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)-spks</string>
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)-spki</string>
 	</array>
+	<key>com.apple.security.temporary-exception.shared-preference.read-only</key>
+	<array>
+		<string>com.apple.scriptmenu</string>
+		<string>com.apple.systemuiserver</string>
+	</array>
 </dict>
 </plist>
