Rename Sparkle DSA public-key file

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -141,7 +141,7 @@
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUPublicDSAKeyFile</key>
-	<string>SparklePublicKey.pem</string>
+	<string>SparkleDSAPublicKey.pem</string>
 	<key>SUPublicEDKey</key>
 	<string>nPwwT+poO5Kmi1NZkE5OveKB8lvQVY20N22E8jgxLCg=</string>
 	<key>UTExportedTypeDeclarations</key>
