Revert "Update GitHub action for 11.0 Big Sur"
This reverts commit 7bdab1bed10a38a84f230063fae9b183d524a3c8.

--- a/.github/workflows/Vienna.yml
+++ b/.github/workflows/Vienna.yml
@@ -5,7 +5,7 @@ on: pull_request
 jobs:
   test:
     name: Test
-    runs-on: macos-11.0
+    runs-on: macOS-latest
 
     steps:
     - name: Install SwiftLint
