Revert "Enable system-generated document icons for Vienna bundle types"
This reverts commit 55a9a0a4b69dc3bc18dd41c15152daec334465a9.

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -9,44 +9,30 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>viennaplugin</string>
+				<string>viennastyle</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>PluginIcon</string>
-			<key>CFBundleTypeIconSystemGenerated</key>
-			<integer>1</integer>
+			<string>StyleIcon</string>
 			<key>CFBundleTypeName</key>
-			<string>Vienna plug-in</string>
+			<string>Vienna Style Package</string>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
-			<key>LSHandlerRank</key>
-			<string>Default</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>com.vienna-rss.plugin</string>
-			</array>
 			<key>LSTypeIsPackage</key>
 			<string>YES</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>viennastyle</string>
+				<string>viennaplugin</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>StyleIcon</string>
-			<key>CFBundleTypeIconSystemGenerated</key>
-			<integer>1</integer>
+			<string>PluginIcon</string>
 			<key>CFBundleTypeName</key>
-			<string>Vienna style</string>
+			<string>Vienna Plugin Package</string>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
 			<key>LSHandlerRank</key>
 			<string>Default</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>com.vienna-rss.style</string>
-			</array>
 			<key>LSTypeIsPackage</key>
 			<string>YES</string>
 		</dict>
@@ -63,8 +49,6 @@
 			</array>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
-			<key>LSHandlerRank</key>
-			<string>Default</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
@@ -138,55 +122,6 @@
 	<string>YES</string>
 	<key>SUPublicDSAKeyFile</key>
 	<string>vienna_public_key.pem</string>
-	<key>UTExportedTypeDeclarations</key>
-	<array>
-		<dict>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>com.apple.bundle</string>
-				<string>com.apple.package</string>
-			</array>
-			<key>UTTypeDescription</key>
-			<string>Vienna plug-in</string>
-			<key>UTTypeIcons</key>
-			<dict>
-				<key>UTTypeIconText</key>
-				<string>Vienna plug-in</string>
-			</dict>
-			<key>UTTypeIdentifier</key>
-			<string>com.vienna-rss.plugin</string>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<array>
-					<string>viennaplugin</string>
-				</array>
-			</dict>
-		</dict>
-		<dict>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>com.apple.bundle</string>
-				<string>com.apple.package</string>
-			</array>
-			<key>UTTypeDescription</key>
-			<string>Vienna style</string>
-			<key>UTTypeIcons</key>
-			<dict>
-				<key>UTTypeIconText</key>
-				<string>Vienna style</string>
-			</dict>
-			<key>UTTypeIdentifier</key>
-			<string>com.vienna-rss.style</string>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<array>
-					<string>viennastyle</string>
-				</array>
-			</dict>
-		</dict>
-	</array>
 	<key>VCSLongHash</key>
 	<string>VCS_FULL_HASH</string>
 	<key>VCSShortHash</key>
