Revert "Set the public EdDSA key"
This reverts commit 06dbc1b82bbffc992b2b65c1eec6a91c3819ca85.

--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -139,7 +139,7 @@
 	<key>SUPublicDSAKeyFile</key>
 	<string>SparklePublicKey.pem</string>
 	<key>SUPublicEDKey</key>
-	<string>nPwwT+poO5Kmi1NZkE5OveKB8lvQVY20N22E8jgxLCg=</string>
+	<string>&lt;insert public key&gt;</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
